shows up. create new is broken

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Host=localhost;Database=BigToDo;Username=dev;Password=brit1336"
   },
   "Logging": {
     "IncludeScopes": false,
